package edu.fiuba.algo3;

public interface Canje {
    Canje siguienteCanje(int cantidadDeCanjes);
    int realizarCanje(int cantidadDeCanjes);
}
